--- a/tic-tac-toe/public/index.html
+++ b/tic-tac-toe/public/index.html
@@ -24,10 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Tic-tac-toe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header> 
+      <div class="title"> 
+        <img src="logo.png" alt="Logo" class="logo" /> 
+      </div> 
+    </header>
     <div id="root"></div>
     <!--
       This HTML file is a template.
